<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_bkg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:minHeight="@dimen/default_large_row_size"
        android:padding="@dimen/default_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/details"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_drawable_padding">

                <!--<TextView-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginRight="@dimen/default_drawable_padding"-->
                <!--android:gravity="center_vertical"-->
                <!--android:text="@string/image" />-->

                <RelativeLayout
                    android:id="@+id/llImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerInParent="true" android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/image" />

                    <ImageView
                        android:id="@+id/ivImage"
                        android:scaleType="fitCenter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:minHeight="200dp"
                        android:minWidth="200dp"
                        android:text="@string/gps_time_default" />

                </RelativeLayout>
            </TableRow>
            <TableRow
                android:id="@+id/vName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_drawable_padding">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/default_drawable_padding"
                    android:gravity="center_vertical"
                    android:text="@string/name" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_drawable_padding">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/default_drawable_padding"
                    android:gravity="center_vertical"
                    android:text="@string/time" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_drawable_padding">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/default_drawable_padding"
                    android:gravity="center_vertical"
                    android:text="@string/lat" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/tvLat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" />
                </RelativeLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_drawable_padding">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/default_drawable_padding"
                    android:gravity="center_vertical"
                    android:text="@string/longi" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/tvLong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" />
                </RelativeLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_drawable_padding">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/default_drawable_padding"
                    android:gravity="center_vertical"
                    android:text="@string/in_or_out" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/tvAction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <LinearLayout
                    android:layout_width="0dp" android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/btnDelete"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/default_medium_row_size"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        card_view:cardBackgroundColor="@color/red"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="0dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/delete"
                            android:textColor="@color/white"
                            android:textSize="@dimen/cardview_textSize" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/btnClose"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/default_medium_row_size"
                        android:layout_weight="1"
                        card_view:cardBackgroundColor="@color/dialog_btn_cancel"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="0dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/close"
                            android:textColor="@color/white"
                            android:textSize="@dimen/cardview_textSize" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>