<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/dialog_bkg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:minHeight="@dimen/default_large_row_size"
            android:padding="@dimen/default_margin">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/white" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:fillViewport="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin"
                android:shrinkColumns="2"
                android:stretchColumns="2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_drawable_padding">

                    <!--<TextView-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_marginRight="@dimen/default_drawable_padding"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:text="@string/image" />-->

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerInParent="true" android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/image" />

                        <ImageView
                            android:id="@+id/ivImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:minHeight="100dp"
                            android:minWidth="100dp"
                            android:text="@string/gps_time_default" />

                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_drawable_padding">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/default_drawable_padding"
                        android:gravity="center_vertical"
                        android:text="@string/time" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tvTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/gps_time_default" />
                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_drawable_padding">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/default_drawable_padding"
                        android:gravity="center_vertical"
                        android:text="@string/lat" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tvLat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical" />
                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_drawable_padding">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/default_drawable_padding"
                        android:gravity="center_vertical"
                        android:text="@string/longi" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tvLong"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical" />
                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_drawable_padding">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/default_drawable_padding"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/default_drawable_padding"
                        android:text="@string/pin" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="@dimen/default_medium_row_size">

                        <EditText
                            android:id="@+id/etPinCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_custom_box"
                            android:gravity="center_vertical"
                            android:hint="@string/pin_hint"
                            android:inputType="textPassword"
                            android:minHeight="@dimen/default_medium_row_size" />

                        <requestFocus />

                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/btnSubmit"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/default_medium_row_size"
                            android:layout_marginRight="2dp"
                            android:layout_weight="1"
                            card_view:cardBackgroundColor="@color/dialog_btn_submit"
                            card_view:cardCornerRadius="6dp"
                            card_view:cardElevation="0dp">

                            <TextView
                                android:id="@+id/tvOk"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/ok"
                                android:textColor="@color/white"
                                android:textSize="@dimen/cardview_textSize" />
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/btnCancel"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/default_medium_row_size"
                            android:layout_weight="1"
                            card_view:cardBackgroundColor="@color/dialog_btn_cancel"
                            card_view:cardCornerRadius="6dp"
                            card_view:cardElevation="0dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/cancel"
                                android:textColor="@color/white"
                                android:textSize="@dimen/cardview_textSize" />
                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>