<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_drawable_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <TextView
                android:id="@+id/tvID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_drawable_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_drawable_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_drawable_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone"
            android:layout_marginBottom="5dp" android:gravity="right"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/btnIn"
                android:layout_width="100dp"
                android:layout_height="@dimen/default_small_row_size"
                card_view:cardBackgroundColor="@color/time_in_btn_in"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/cardview_textSize" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/btnOut"
                android:layout_width="100dp"
                android:layout_height="@dimen/default_small_row_size"
                android:layout_marginLeft="@dimen/default_drawable_padding"
                card_view:cardBackgroundColor="@color/time_in_btn_out"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/out"
                    android:textColor="@color/white"
                    android:textSize="@dimen/cardview_textSize" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/table_two_columns" />
</LinearLayout>